--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,7 +4,7 @@ name: Checks
 on: [push]
 
 jobs:
-  test-links:
+  test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
@@ -14,9 +14,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8" 
-      
+        run: docker-compose run --rm app sh -c "flake8"
