--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -21,7 +21,7 @@ services:
     image: postgres:13-alpine
     restart: always
     volumes:
-      - postgres-data:var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
@@ -34,7 +34,7 @@ services:
     depends_on:
       - app
     ports:
-      - 8000:8000
+      - 80:8000
     volumes:
       - static-data:/vol/static
 
